--- a/frontend/src/app/recoverPassword/forgotten-password-confirm/forgotten-password-confirm.component.html
+++ b/frontend/src/app/recoverPassword/forgotten-password-confirm/forgotten-password-confirm.component.html
@@ -1,33 +1,31 @@
 <div class="bgComponent">
     <div class="form">
       <mat-card class="card">
-        <mat-card-title>Login</mat-card-title>
+        <mat-card-title>Enter your new password</mat-card-title>
         <mat-card-content>
           <div class="container">
             <mat-form-field>
               <input
-                [(ngModel)]="loginData.email"
-                type="email"
-                matInput
-                placeholder="Email"
-                required
-              />
-            </mat-form-field>
-            <mat-form-field>
-              <input
-                [(ngModel)]="loginData.password"
+                [(ngModel)]="passwordData.password"
                 type="password"
                 matInput
                 placeholder="Password"
                 required
               />
             </mat-form-field>
+            <mat-form-field>
+              <input
+                [(ngModel)]="passwordData.passwordConfirm"
+                type="password"
+                matInput
+                placeholder="Confirm Password"
+                required
+              />
+            </mat-form-field>
           </div>
         </mat-card-content>
         <mat-card-actions>
-          <button (click)="login()" class="button" mat-raised-button>Go!!</button>
-          <span class="spacer"></span>
-          <a id="forgotPassword" href="/forgottenPassword">Forgot password?</a>
+          <button (click)="getRecoverPassword()" class="button" mat-raised-button>Send request</button>
         </mat-card-actions>
       </mat-card>
     </div>
