--- a/frontend/src/app/admin/list-role/list-role.component.css
+++ b/frontend/src/app/admin/list-role/list-role.component.css
@@ -1,5 +1,5 @@
 .bgComponent {
-  background-color: #a5abaf;
+  background-color: #a5abaf00;
   width: 100%;
   height: 100%;
   padding-bottom: 30%;
@@ -26,7 +26,7 @@ th {
 }
 
 .bgShearch {
-  background-color: #161f29;
+  background-color: #161f2900;
   color: #ffffff;
 }
 
@@ -61,7 +61,7 @@ th {
 .button {
   display: flex;
   justify-content: center;
-  background-color: #4de008;
+  background-color: #0fc937be;
   width: 5%;
   height: 5%;
 }
