--- a/frontend/src/app/home/footer/footer.component.css
+++ b/frontend/src/app/home/footer/footer.component.css
@@ -2,9 +2,9 @@ footer {
   width: 100%;
   height: 70px;
   position: absolute;
-  background-color: #383d38;
+  background-color:#aa8ad383 ;
   text-align: center;
-  color: #cecccc;
+  color: #0e0a0a;
   position: fixed;
   padding: 30px;
   bottom: 0;
