--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,6 +1,7 @@
 html,
 body {
-  background-color: #a5abaf;
+  background-image: url(../src/assets/5914449.jpg);
+  background-position: 0px 800px;
   width: 100%;
   height: 100%;
   height: 100%;
@@ -11,7 +12,7 @@ body {
 
 .style-snackBarTrue {
   background-color: #568003;
-  color: #ffffff;
+  color: #fbfcfd;
 }
 .style-snackBarFalse {
   background-color: #810505;
